# revenant

./: .gitignore  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  _typos.toml  pyrightconfig.json
.githooks/: pre-commit
docs/: README.md  (+6 more)
python/: .gitignore  .pre-commit-config.yaml  PrivacyInfo.xcprivacy  README.md  entitlements-sandbox.plist  pyproject.toml  revenant-cli.spec  revenant-gui.spec  setup_mac.py
python/appimage/: io.github.lobotomoe.revenant.desktop  io.github.lobotomoe.revenant.metainfo.xml
python/flatpak/: io.github.lobotomoe.revenant.yml
python/icons/: revenant.icns
python/msix/: AppxManifest.xml
python/scripts/: _build_common.py  _build_macos.py  _build_nuitka.py  _build_pyinstaller.py  _capture.py  _po_common.py  _store_compose.py  build.py  build_appimage.py  build_msix.py  check_translations.py  cli_entry.py  compile_translations.py  gui_entry.py  merge_universal.py  prepare_font.py  screenshot_gallery.py  sign_and_notarize.sh
python/snap/: snapcraft.yaml
python/src/revenant/: __init__.py  __main__.py  api.py  constants.py  errors.py
python/src/revenant/config/: __init__.py  _storage.py  config.py  credentials.py  profiles.py
python/src/revenant/core/: __init__.py  cert_expiry.py  cert_info.py  chain.py  signing.py  tsl.py
python/src/revenant/core/appearance/: __init__.py  fields.py  fonts.py  image.py  stream.py
python/src/revenant/core/appearance/font_data/: LICENSES  __init__.py
python/src/revenant/core/pdf/: __init__.py  asn1.py  builder.py  cms_extraction.py  cms_info.py  incremental.py  ltv.py  objects.py  position.py  render.py  verify.py
python/src/revenant/network/: __init__.py  discovery.py  legacy_tls.py  protocol.py  soap.py  soap_envelope.py  soap_parsers.py  soap_transport.py  transport.py
python/src/revenant/ui/: __init__.py  helpers.py  workflows.py
python/src/revenant/ui/cli/: __init__.py  cert.py  setup.py  sign.py  verify.py
python/src/revenant/ui/gui/: __init__.py  app.py  batch_dialog.py  connect_dialog.py  dialogs.py  direction.py  platform.py  position_preview.py  setup.py  sign_form.py  sign_options.py  sign_panels.py  sign_worker.py  utils.py  verify.py  verify_dialog.py
python/tests/: _cert_factory.py  conftest.py  test_api.py  test_appearance.py  test_asn1.py  test_cert_expiry.py  test_chain.py  test_cli.py  test_config.py  test_discovery.py  test_errors.py  test_gui.py  test_helpers.py  test_i18n.py  test_integration.py  test_ltv.py  test_pdf.py  test_signing.py  test_soap.py  test_transport.py  test_verify.py  test_verify_chain.py  test_workflows.py
rust/: .gitattributes  .gitignore  Cargo.toml  README.md
rust/crates/revenant-cli/: Cargo.toml  LICENSE  README.md
rust/crates/revenant-cli/src/: app.rs  exit.rs  main.rs  output.rs  prompt.rs
rust/crates/revenant-cli/src/commands/: cert.rs  check.rs  mod.rs  setup.rs  verify.rs
rust/crates/revenant-core/: Cargo.toml  README.md
rust/crates/revenant-core/examples/: prepare_signature.rs  soap_roundtrip.rs  verify_signature.rs
rust/crates/revenant-core/src/: constants.rs  error.rs  signing.rs  xml.rs
rust/crates/revenant-core/src/api/: verify.rs
rust/crates/revenant-core/src/appearance/: fields.rs  image.rs
rust/crates/revenant-core/src/cms/: digest.rs  inspect.rs  ltv.rs  mod.rs
rust/crates/revenant-core/src/config/: credentials.rs  mod.rs  profiles.rs  settings.rs  storage.rs
rust/crates/revenant-core/src/net/: mod.rs  soap.rs  soap_parsers.rs  soap_transport.rs  transport.rs
rust/crates/revenant-core/src/pdf/: builder.rs  incremental.rs  mod.rs  objects.rs  position.rs  reader.rs  render.rs  verify.rs
rust/crates/revenant-core/src/pki/: cert.rs
rust/crates/revenant-core/tests/: ekeng_integration.rs  pdf_cert_extraction.rs
rust/crates/revenant-legacy-tls/: Cargo.toml  README.md
rust/crates/revenant-legacy-tls/examples/: roundtrip.rs
rust/crates/revenant-legacy-tls/src/: error.rs  http.rs  lib.rs  prf.rs  record.rs
rust/crates/revenant-sign/: Cargo.toml  README.md
rust/crates/revenant-sign-core/: Cargo.toml  README.md
rust/crates/revenant-sign-core/examples/: prepare_signature.rs  soap_roundtrip.rs  verify_signature.rs
rust/crates/revenant-sign-core/src/: error.rs  lib.rs  xml.rs
rust/crates/revenant-sign-core/src/api/: mod.rs  verify.rs
rust/crates/revenant-sign-core/src/appearance/: fonts.rs  mod.rs
rust/crates/revenant-sign-core/src/cms/: asn1.rs  extraction.rs  ltv.rs  mod.rs  signature.rs
rust/crates/revenant-sign-core/src/config/: credentials.rs  secret.rs  storage.rs
rust/crates/revenant-sign-core/src/net/: discovery.rs  mod.rs  protocol.rs  soap_envelope.rs  transport.rs
rust/crates/revenant-sign-core/src/pdf/: builder.rs  incremental.rs  objects.rs  reader.rs
rust/crates/revenant-sign-core/src/pki/: cert_info.rs  expiry.rs  mod.rs
rust/crates/revenant-sign-core/tests/: ekeng_integration.rs  pdf_cert_extraction.rs
rust/crates/revenant-sign-gui/: Cargo.toml
rust/crates/revenant-sign-gui/src/: app.rs  fonts.rs  friendly.rs  icons.rs  jobs.rs  main.rs  reveal.rs  style.rs  theme.rs  worker.rs
rust/crates/revenant-sign-gui/src/i18n/: mod.rs  po.rs
rust/crates/revenant-sign-gui/src/views/: about.rs  account.rs  connect.rs  login.rs  mod.rs  preview.rs  settings.rs  sign.rs  verify.rs
rust/crates/revenant-sign-tls/: Cargo.toml  README.md
rust/crates/revenant-sign-tls/examples/: roundtrip.rs
rust/crates/revenant-sign-tls/src/: handshake.rs  http.rs  lib.rs
rust/crates/revenant-sign/src/: app.rs  cli.rs  exit.rs  main.rs  prompt.rs
rust/crates/revenant-sign/src/commands/: account.rs  cert.rs  check.rs  mod.rs  report.rs  setup.rs  verify.rs
rust/packaging/icons/: make-icns.sh  revenant.icns
rust/packaging/linux/: AppRun  build-appimage.sh  io.github.lobotomoe.revenant.metainfo.xml  io.github.lobotomoe.revenant.yml
rust/packaging/macos/: Info.plist  bundle-app.sh  entitlements-sandbox-nested.plist  entitlements-sandbox.plist  entitlements.plist  make-dmg.sh
rust/packaging/windows/: AppxManifest.xml  build-msix.sh
rust/snap/: snapcraft.yaml
(+174 files in other folders)
