[package]
name = "revenant-sign"
description = "Command-line client for ARX CoSign / DocuSign Signature Appliance electronic signatures"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/revenant-sign"
readme = "README.md"
keywords = ["signature", "pdf", "cosign", "cli", "sign"]
categories = ["command-line-utilities", "cryptography"]

# The installed binary is `revenant`, matching the Python and npm CLIs.
[[bin]]
name = "revenant"
path = "src/main.rs"

[dependencies]
revenant-sign-core = { path = "../revenant-sign-core", version = "0.1.0" }

clap = { workspace = true }
log.workspace = true
env_logger.workspace = true
tempfile.workspace = true
url.workspace = true

# CLI-only: hidden password entry for the setup wizard.
rpassword = "7"

[lints]
workspace = true
